chore: formatting updates

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
         padding: 10px;
         background-color: #fff;
         border-radius: 5px;
+        line-height: 1.75;
+      }
+      li {
+        line-height: 1.5;
       }
       textarea {
         width: 100%;
@@ -36,6 +40,31 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      }
+      code {
+        font-family: "Courier New", Courier, monospace;
+        font-size: 14px;
+        background: #f9f9f9;
+        padding: 2px 5px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        font-weight: bold;
+      }
+      pre {
+        font-size: 14px;
+        background: #f9f9f9;
+        padding: 5px 2px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        line-height: 1.2;
+      }
+      pre code {
+        padding: 0;
+        border: none;
+        font-weight: normal;
+      }
+      pre {
+        padding: 10px;
       }
       blockquote {
         margin: 0;
