--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
           id="user_input"
           name="user_input"
           rows="4"
-          placeholder="Type your message here and press enter..."
+          placeholder="Type your message here and cmd-enter..."
         ></textarea>
       </form>
     </div>
