--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,9 @@
         padding: 5px 10px;
         cursor: pointer;
       }
+      h1 {
+        margin-top: 0;
+      }
     </style>
   </head>
   <body>
