fix: minor tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,11 @@
       h1 {
         margin-top: 0;
       }
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
     </style>
   </head>
   <body>
@@ -115,7 +120,7 @@
           id="user_input"
           name="user_input"
           rows="4"
-          placeholder="Type your message here and cmd-enter..."
+          placeholder="Type your message here and send with cmd-enter..."
         ></textarea>
       </form>
     </div>
